[package]
build   = "build.rs"
edition = "2021"
name    = "opa-tp-protocol"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
async-trait = "0.1.61"
chrono = { version = "0.4.19", features = ["serde"] }
hex = "0.4.3"
k256 = { version = "0.11.3", features = [
  "default",
  "arithmetic",
  "ecdsa",
  "pkcs8",
  "sha256",
  "std",
  "pem",
] }
lazy_static = "1.4.0"
openssl = "0.10.38"
prost = "0.11.3"
prost-types = "0.11.2"
protobuf = "2.27.1"
rand = { version = "0.8.5", features = ["getrandom"] }
rand_core = "0.6.3"
sawtooth-sdk = "0.5.2"
serde = { version = "1.0.150", features = ["derive"] }
serde_json = "1.0.89"
thiserror = "1.0.38"
tokio = { version = "1.20.3", features = ["time", "macros", "rt-multi-thread"] }
tracing = "0.1.37"
url = "2.3.1"
uuid = { version = "1.2.2", features = ["v4", "serde", "std"] }
zmq = "0.9.2"

[build-dependencies]
glob        = "0.3.0"
prost-build = "0.10.0"
