[package]
build   = "build.rs"
edition = "2021"
name    = "opa-tp-protocol"
version = "0.7.5"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow             = { workspace = true }
async-sawtooth-sdk = { workspace = true }
async-trait        = { workspace = true }
chrono             = { workspace = true, features = ["serde"] }
derivative         = { workspace = true }
futures            = { workspace = true }
hex                = { workspace = true }
k256               = { workspace = true }
lazy_static        = { workspace = true }
openssl            = { workspace = true }
prost              = { workspace = true }
prost-types        = { workspace = true }
rand               = { workspace = true }
rand_core          = { workspace = true }
serde              = { workspace = true, features = ["derive"] }
serde_json         = { workspace = true }
thiserror          = { workspace = true }
tokio              = { workspace = true }
tracing            = { workspace = true }
url                = { workspace = true }
uuid               = { workspace = true }
zmq                = { workspace = true }

[build-dependencies]
glob        = { workspace = true }
prost-build = { workspace = true }
